--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <h4 class="dark">iGOS++: Integrated Gradient Optimized Saliency by Bilateral Perturbations
                             <span class="">(ACM-CHIL 21)</span></h4>
 			<h5><strong>Saeed Khorram</strong>, Tyler Lawson, Li Fuxin</h5>
-                        <h5>[<a href="https://arxiv.org/pdf/2012.15783.pdf">PDF</a>] [<a href="https://github.com/khorrams/IGOS_pp">Code</a>] [<a href="./files/iGOS++PosterACMCHIL.pdf">Poster</a>]</h5>
+                        <h5>[<a href="https://arxiv.org/pdf/2012.15783.pdf">PDF</a>] [<a href="https://github.com/khorrams/IGOS_pp">Code</a>] [<a href="./files/iGOS++PosterACMCHIL.pdf">Poster</a>] [<a href="https://www.chilconference.org/2021/proceeding_21P17.html">Presentation</a>]</h5>
                     </div>
                     <br>
                     <div class="box alt">
