--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <br>
             <ul class="icons">
                 <!--						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
-                <li><a href="https://github.com/saeed-khorram" class="icon tokhmi fa fa-github"><span class="label">Github</span></a></li>
+                <li><a href="https://github.com/khorrams" class="icon tokhmi fa fa-github"><span class="label">Github</span></a></li>
                 <li><a href="https://khorram-saeed.medium.com/" class="icon tokhmi fa fa-medium"><span class="label">Instagram</span></a></li>
                 <li><a href="https://www.linkedin.com/in/saeed-khorram-7a0a8281/" class="icon fa tokhmi fa-linkedin"><span class="label">LinkedIn</span></a></li>
                 <li><a href="https://scholar.google.com/citations?user=-zfeeKUAAAAJ&hl=en" id="kosmikh"><i class="icon ai ai-google-scholar"></i></a></li>
