applied letter paper added, cv updated

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="inner align-center">
                     <br>
                     <code> <span id="cv">1-page CV</span>: </code>
-                    <p><a class="align-center" href="./files/cv.pdf" id="kosmikh"><i class="fa fa-file-download fa-2x"></i></a></p>
+                    <p><a class="align-center" href="./files/cv_nov_2021.pdf" id="kosmikh"><i class="fa fa-file-download fa-2x"></i></a></p>
                     <br>
                 </div>
             </h1>
@@ -67,7 +67,9 @@
             <br>
 
             <ul>
-               
+        	<li> <span class="dark">Oct 21:</span> Our paper "From Heatmaps to Structural Explanations of Image Classifiers" is accpeted to the Applied AI Journals! <a href="https://arxiv.org/pdf/2109.06365.pdf">[PDF]</a>
+
+
                 <li> <span class="dark">May 21:</span> Our paper "Re-Understanding Finite-State Representations of Recurrent Policy Networks" is accpeted to the ICML 21! (acceptance rate 21.4%) <a href="https://arxiv.org/pdf/2006.03745">[PDF]</a>
 
                 <li> <span class="dark">May 21:</span> Our new paper on flexible training of deep networks using ADMM titled "Stochastic Block-ADMM for Training Deep Networks
