applied letter paper image and abstract added

--- a/index.html
+++ b/index.html
@@ -116,7 +116,30 @@
             <div class="row">
                 <ul class="">
 
+                    <!-- ######################## -->
+                    <div class="align-center">
+                        <h4 class="dark">From Heatmaps to Structured Explanations of Image Classifiers
+                            <span class="">(Applied AI Letters 21)</span></h4>
+			<h5>Li Fuxin, Zhongang Qi, <strong>Saeed Khorram</strong>, Vivswan Shitole, Prasad Tadepalli, Minsuk Kahng, Alan Fern</h5>
+                        <h5>[<a href="https://arxiv.org/pdf/2109.06365.pdf">PDF</a>] </h5>
+                    </div>
+                    <br>
+                    <div class="box alt">
+                        <div class="row ">
+                            <!-- gtr-150 gtr-uniform -->
+                            <div class="col-4 col-12-small">
+                                <span class="image fit ">
+                                    <img src="images/papers/applied.png" alt="">
+                                </span>
+                            </div>
+                            <div class="col-8 col-12-small">
+                                <h5 align="justify">This paper summarizes our endeavors in the past few years in terms of explaining image classifiers, with the aim of including negative results and insights we have gained. The paper starts with describing the explainable neural network (XNN), which attempts to extract and visualize several high-level concepts purely from the deep network, without relying on human linguistic concepts. This helps users understand network classifications that are less intuitive and substantially improves user performance on a difficult fine-grained classification task of discriminating among different species of seagulls. Realizing that an important missing piece is a reliable heatmap visualization tool, we have developed I-GOS and iGOS++ utilizing integrated gradients to avoid local optima in heatmap generation, which improved the performance across all resolutions. During the development of those visualizations, we realized that for a significant number of images, the classifier has multiple different paths to reach a confident prediction. This has lead to our recent development of structured attention graphs (SAGs), an approach that utilizes beam search to locate multiple coarse heatmaps for a single image, and compactly visualizes a set of heatmaps by capturing how different combinations of image regions impact the confidence of a classifier. Through the research process, we have learned much about insights in building deep network explanations, the existence and frequency of multiple explanations, and various tricks of the trade that make explanations work. In this paper, we attempt to share those insights and opinions with the readers with the hope that some of them will be informative for future researchers on explainable deep learning.
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
 
+ 
                     <!-- ######################## -->
                     <div class="align-center">
                         <h4 class="dark">Re-Understanding Finite-State Representations of Recurrent Policy Networks
