--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <br>
 
             <ul>
-                <li> <span class="dark">Mar 22:</span> Our counterfactual visual explanation paper "Cycle-Consistent Counterfactuals by Latent Transformations" (C3LT), is published at CPVR 2022! <a href="">[PDF]</a>
+		    <li> <span class="dark">Mar 22:</span> Our counterfactual visual explanation paper "Cycle-Consistent Counterfactuals by Latent Transformations" (C3LT), is accepted to the CPVR 2022! (acceptance rate 25.33%) <a href="https://arxiv.org/pdf/2203.15064.pdf">[PDF]</a> <a href="https://github.com/khorrams/c3lt">[Github]</a>
 
             
         	    <li> <span class="dark">Oct 21:</span> Our paper "From Heatmaps to Structural Explanations of Image Classifiers" is accpeted to the Applied AI Journals! <a href="https://arxiv.org/pdf/2109.06365.pdf">[PDF]</a>
@@ -124,7 +124,7 @@
                         <h4 class="dark">“Cycle-Consistent Counterfactuals by Latent Transformations”
                             <span class="">(CVPR 22)</span></h4>
 			<h5><strong>Saeed Khorram</strong>, Li Fuxin</h5>
-                        <h5>[<a href="">PDF</a>] </h5>
+			<h5>[<a href="https://arxiv.org/pdf/2203.15064.pdf">PDF</a>][<a href="https://github.com/khorrams/c3lt">Code</a>] </h5>
                     </div>
                     <br>
                     <div class="box alt">
@@ -221,7 +221,8 @@
                     <div class="align-center">
                         <h4 class="dark">iGOS++: Integrated Gradient Optimized Saliency by Bilateral Perturbations
                             <span class="">(ACM-CHIL 21)</span></h4>
-                        <h5><strong>Saeed Khorram</strong>, Tyler Lawson, Li Fuxin</h5>
+                        <h5><strong>Saeed Khorram<sup>*</sup></strong>, Tyler Lawson<sup>*</sup>, Li Fuxin</h5>
+                        <!--<h5><sup>*</sup> equal contribution</h5>-->
                         <h5>[<a href="https://arxiv.org/pdf/2012.15783.pdf">PDF</a>] [<a href="https://github.com/khorrams/IGOS_pp">Code</a>] [<a href="./files/iGOS++PosterACMCHIL.pdf">Poster</a>] [<a href="https://www.chilconference.org/2021/proceeding_21P17.html">Presentation</a>]</h5>
                     </div>
                     <br>
