--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h4 class="dark">“Cycle-Consistent Counterfactuals by Latent Transformations”
                             <span class="">(CVPR 22)</span></h4>
 			<h5><strong>Saeed Khorram</strong>, Li Fuxin</h5>
-			<h5>[<a href="https://arxiv.org/pdf/2203.15064.pdf">PDF</a>][<a href="https://github.com/khorrams/c3lt">Code</a>] </h5>
+			<h5>[<a href="https://arxiv.org/pdf/2203.15064.pdf">PDF</a>] [<a href="https://github.com/khorrams/c3lt">Code</a>] </h5>
                     </div>
                     <br>
                     <div class="box alt">
@@ -170,9 +170,9 @@
                     <!-- ######################## -->
                     <div class="align-center">
                         <h4 class="dark">Re-Understanding Finite-State Representations of Recurrent Policy Networks
-                            <span class="">(ICMLW 20 + ICML 21)</span></h4>
+                            <span class="">(ICML 21)</span></h4>
                         <h5>Mohamad H. Danesh, Anurag Koul, Alan Fern, <strong>Saeed Khorram</strong></h5>
-                        <h5>[<a href="https://arxiv.org/pdf/2006.03745">PDF</a>] </h5>
+			<h5>[<a href="https://arxiv.org/pdf/2006.03745">PDF</a>] [<a href="https://github.com/modanesh/Differential_IG">Code</a>] [<a href="https://slideslive.com/38958800/reunderstanding-finitestate-representations-of-recurrent-policy-networks?ref=speaker-80465-latest">Presentation</a>] </h5>
                     </div>
                     <br>
                     <div class="box alt">
@@ -245,7 +245,7 @@
 
                     <div class="align-center">
                         <h4 class="dark">Visualizing Deep Networks by Optimizing with Integrated Gradients
-                            <span class="">(CVPRW 19, AAAI 20)</span></h4>
+                            <span class="">(CVPRW 19/AAAI 20)</span></h4>
                         <h5>Zhongang Qi, <strong>Saeed Khorram</strong>, Li Fuxin</h5>
                         <h5>[<a href="https://aaai.org/ojs/index.php/AAAI/article/view/6863/6717">PDF</a>] [<a href="https://igos.eecs.oregonstate.edu/">Demo</a>] [<a href="https://github.com/zhongangqi/IGOS">Code</a>] [<a href="https://khorram-saeed.medium.com/i-gos-a-casual-saliency-approach-to-explain-deep-networks-953a0460b903">Medium</a>] </h5>
                     </div>
