--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 							magna sed accumsan arcu neque.</h2>
 -->
             </header>
-            <div align="justify">Hi, I am a Ph.D. candidate of Computer Science at the <a href="https://eecs.oregonstate.edu/">School of Electrical Engineering and Computer Science, Oregon State University</a>. I am advised by Prof. <a href="https://web.engr.oregonstate.edu/~lif/">Fuxin Li</a>. My research interests mainly lie in the area of Computer vision, Interpretable AI models, Optimization, and Reinforcement Learning. <br><br>
-                Before attending Oregon State, I was an undergraduate student at Amirkabir University of Technology. I was a member of Multimedia Signal Processing Research Lab (MSPRL) under supervision of Prof. <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&hl=en">Hamid Sheikhzadeh</a>.
+            <div align="justify">I am an Applied Scientist at VCV-Science group at <a href="https://machinelearning.apple.com/">Apple</a> where I mainly work on large-scale generative AI for vision. Prior to that, I was a Ph.D. student in CS and graduate researcher at <a href="https://eecs.oregonstate.edu/">Oregon State University</a> supervised by Prof. <a href="https://web.engr.oregonstate.edu/~lif/">Fuxin Li</a>.
+                <br><br>
+                My research interests mainly include large-scale generative models, computer vision, interpretable AI models, distributed optimization, and self-supervised learning.
+<!--                Before attending Oregon State, I was an undergraduate student at Amirkabir University of Technology. I was a member of Multimedia Signal Processing Research Lab (MSPRL) under supervision of Prof. <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&hl=en">Hamid Sheikhzadeh</a>.-->
             </div>
             <!--
 						<ul class="actions">
