--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 							magna sed accumsan arcu neque.</h2>
 -->
             </header>
-            <div align="justify">I am an Applied Scientist at VCV-Science group at <a href="https://machinelearning.apple.com/">Apple</a> where I work vision foundation models. Prior to that, I was a Ph.D. student in CS and graduate researcher at <a href="https://eecs.oregonstate.edu/">Oregon State University</a> supervised by Prof. <a href="https://web.engr.oregonstate.edu/~lif/">Fuxin Li</a>.
+            <div align="justify">I am an Applied Scientist at VCV-Science group at <a href="https://machinelearning.apple.com/">Apple</a> where I work on vision foundation models. Prior to that, I was a CS Ph.D. student and graduate researcher at <a href="https://eecs.oregonstate.edu/">Oregon State University</a> supervised by Prof. <a href="https://web.engr.oregonstate.edu/~lif/">Fuxin Li</a>.
                 <br><br>
-                My research interests mainly include foundation models, generative learning, computer vision, interpretability in AI models, self-supervised learning, and reinforcement learning.
+                My research interests mainly include foundation models, generative learning, 2D/3D computer vision, interpretability in AI models, self-supervised learning, and reinforcement learning.
 <!--                Before attending Oregon State, I was an undergraduate student at Amirkabir University of Technology. I was a member of Multimedia Signal Processing Research Lab (MSPRL) under supervision of Prof. <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&hl=en">Hamid Sheikhzadeh</a>.-->
             </div>
             <!--
