--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- ##################### NEWS ############################# -->
         <section>
-            <h2 class="align-center">News</h2>
+            <h2 class="align-center">News [outdated]</h2>
             <br>
 
             <ul>
