--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                          <!-- ######################## -->
                     <div class="align-center">
                         <h4 class="dark">“Comparing the Decision-Making Mechanisms by Transformers and CNNs via Explanation Methods”
-                            <span class="">(CVPR 24 - Oral/Best Paper Award Finalist)</span></h4>
+                            <span class="">(CVPR 24 - Oral/Best Student Paper Runners-up)</span></h4>
 			<h5>Mingqi Jiang, <strong>Saeed Khorram</strong>, Li Fuxin</h5>
 			<h5>[<a href="https://arxiv.org/abs/2212.06872">arXiv</a>] [<a href="https://mingqij.github.io/projects/cdmmtc/">Project Page</a>] <a href="https://cvpr.thecvf.com/virtual/2024/poster/30580">[CVPR Page]</a> </h5>
                     </div>
